# wcjson

./: .gitignore  CMakeLists.txt  CODE_OF_CONDUCT.md  LICENSE.txt  Makefile.am  README.md  SECURITY.md  configure.ac  wcjson-document.3.md  wcjson.1.md  wcjson.3.md
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: cmake-multi-platform.yml  codeql.yml
cmake/: Makefile.am  wcjson.pc.in  wcjson.rc  wcjsonConfig.cmake.in
compat/: Makefile.am  malloc.c  realloc.c
src/: Makefile.am  optparse.h  wcjson-cli.c  wcjson-document.3  wcjson-document.c  wcjson-document.h  wcjson.1  wcjson.3  wcjson.c  wcjson.h  wcjson.pc.in  wcjson_cli.c
tests/: Makefile.am  test-cli.c  testsuite.at
